Fix winner annoucement pagination cutoff

--- a/src/Components/Home/styles.module.scss
+++ b/src/Components/Home/styles.module.scss
@@ -131,7 +131,7 @@
                 transform: rotate(-180deg);
             }
             .custom-pagination {
-                width: auto !important;
+                // width: auto !important;
                 .swiper-pagination-bullet {
                     width: auto;
                     height: auto;
